--- a/views/carReview.handlebars
+++ b/views/carReview.handlebars
@@ -20,14 +20,14 @@
 
 <div class="bg-white w-[80%] max-[426px]:w-[100%] shadow-lg self-center rounded-lg mx-6 py-2 px-4 max-[426px]:p-1">
 
-  <div class="flex flex-col gap-4 mx-6 text rounded-lg p-6 max-[426px]:m-1 max-[426px]:p-2 carReviewBoxCont bg-slate-200">
+  <div class="flex-col gap-4 mx-6 text rounded-lg p-6 max-[426px]:m-1 max-[426px]:p-2 carReviewBoxCont bg-slate-200">
     <h2 class="text-2xl text-center py-2 rounded-lg font-semibold carReviewTitle bg-[rgb(186,213,238)]">{{title}}</h2>
-   <div class="flex flex-row justify-between"><p>Make: <b>{{carmake}}</b> </p><p>Model: <b> {{carmodel}}</b></p></div>
+  <div class="flex flex-col"><p>Make: <b>{{carmake}}</b> </p><p>Model: <b> {{carmodel}}</b></p></div>
     <p class="text-xl font-serif">{{carReview}}
     </p>
-    
+  </div>
 
-          <div class="flex flex-row justify-around md:flex-col md:gap-6 max-[426px]:flex-col" id="images-container"></div>
+   <div class="flex flex-col sm:flex-row justify-around " id="images-container"></div>
     <p class="text-right italic carReviewCreate">-Created by
   {{creator.username}}
   on
@@ -62,7 +62,7 @@
           name="comment-body"
           placeholder="Enter a comment here..."
           rows="4"
-		      class="bg-[#f5f3f3] w-[50vw] self-center p-2 rounded-lg max-[426px]:m-0 max-[426px]:w-[90vw]"
+		      class="bg-white w-[50vw] self-center p-2 rounded-lg max-[426px]:m-0 max-[426px]:w-[90vw]"
         ></textarea>
       </div>
       <div class="btnComment self-center my-4 p-2 px-6 bg-slate-600 text-white rounded-lg hover:bg-green-400">
