--- a/views/carReview.handlebars
+++ b/views/carReview.handlebars
@@ -22,8 +22,8 @@
 
   <div class="flex-col gap-4 mx-6 text rounded-lg p-6 max-[426px]:m-1 max-[426px]:p-2 carReviewBoxCont bg-slate-200">
     <h2 class="text-2xl text-center py-2 rounded-lg font-semibold carReviewTitle bg-[rgb(186,213,238)]">{{title}}</h2>
-  <div class="flex flex-col"><p>Make: <b>{{carmake}}</b> </p><p>Model: <b> {{carmodel}}</b></p></div>
-    <p class="text-xl font-serif">{{carReview}}
+  <div class="flex flex-row"><p>Make: <b>{{carmake}}</b>  Model: <b>{{carmodel}}</b></p></div>
+    <p class="text-xl font-serif" id="carReview">{{carReview}}
     </p>
   </div>
 
