--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,8 +8,8 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
 
-  <body class="bg-[#f5f3f3]">
-    {{!-- <div class="flex-col flex justify-around"> --}}
+  <body class="bg-[#f5f3f3] flex-col">
+  
 
       <nav
         class="text-center flex flex-row max-[426px]:flex-col max-[426px]:items-center justify-between px-10 max-[426px]:px-6 py-8 max-[426px]:py-4 text-white max-[426px]:gap-6 bg-slate-600 mb-5 max-[426px]:mb-0 text-lg font-bold"
