--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,7 +8,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
 
-  <body class="bg-[#f5f3f3] flex-col">
+  <body class="bg-[#f5f3f3] flex-col h-full">
   
 
       <nav
