corrected display issue

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -159,3 +159,10 @@ a:hover {
     background-position: 0% 50%;
   }
 }
+
+.searchText{
+  font-size: 20px;
+  font-weight: bolder;
+  justify-self: center;
+  flex-basis: auto;
+}
