--- a/views/searchResults.handlebars
+++ b/views/searchResults.handlebars
@@ -26,7 +26,7 @@
 
 
   <div class="container">
-  <h2>Search Results</h2>
+  <h2 class="searchText text-center p-6">Search Results:</h2>
   {{#if searchResult.length}}
     {{#each searchResult as |carReview|}}
       <div class="flex flex-col w-full max-[426px]:mt-5 max-[426px]:mb-1">
