--- a/public/css/style.css
+++ b/public/css/style.css
@@ -143,7 +143,7 @@ a:hover {
 }
 
 .animated-bg {
-  background: linear-gradient(270deg, #ee9519, #2591b5, #ec0c0c);
+  background: linear-gradient(270deg, #cf2560, #6412b1, #220bb5);
   background-size: 200% 200%;
   animation: animatedBackground 30s ease-in-out infinite;
 }
