--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -141,7 +141,7 @@
 
 
 <div class="flex-grow">
-  <form class="flex flex-box justify-center large-input pt-6" action="/search" method="get">
+  <form class="flex flex-box justify-center large-input py-6" action="/search" method="get">
   <label for="" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"></label>
   <input class="block w-half p-4 text-gray-900 border border-gray-300 rounded-lg bg-gray-50 sm:text-md focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" type="text" name="q" placeholder="Search reviews...">
   <button type="submit" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Search</button>
