--- a/views/carReview.handlebars
+++ b/views/carReview.handlebars
@@ -36,8 +36,8 @@
 </p>
   </div>
 
-    <h2 class="font-semibold text-xl mt-4 flex col justify-center max-[426px]:mb-4">Comments</h2>
-  <div class="mx-2 mb-10 max-[426px]:w-[100vw] max-[426px]:m-0 max-[426px]:p-0 max-[426px]:gap-4 flex flex-row max-[426px]:flex-col max-[426px]:items-center flex-wrap justify-center">
+  <h2 class="font-semibold text-xl mt-4 flex col justify-center max-[426px]:mb-4"><span class="comments-word">↓↓↓ Comments Below ↓↓↓</span></h2>
+<div class="mx-2 mb-10 max-[426px]:w-[100vw] max-[426px]:m-0 max-[426px]:p-0 max-[426px]:gap-4 flex flex-row max-[426px]:flex-col max-[426px]:items-center flex-wrap justify-center">
 
     {{#each comments as |comment|}}
       <div class="commentCont bg-slate-200 flex flex-col justify-center gap-2 m-4 p-4 max-[426px]:m-0 rounded-lg">
